--- a/new.html
+++ b/new.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>guru fan of mallikarjuna</h1>
+    <h1>maheshbabu</h1>
 </body>
 </html>
